# researcher

./: .gitignore  .opencode-sandbox.json  README.md  SETTINGS_IMPLEMENTATION_CHECKLIST.md  deploy.sh  fix_searxng.sh  mcp_config.sample.json  mcp_config.sample.toml  migrate_db.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.sh  searxng_settings.yml  setenv.ps1  setenv.sh  setup.sh  test_regression_tag_bug.py  test_settings_reinitialization.py
docs/: architecture.md  mcp-setup.md  perplexica-setup.md  security.md  streamlit-guide.md  streamlit-guide.md.old
openspec/: AGENTS.md  project.md
scripts/: ollama-start.ps1  ollama-start.sh  ollama-stop.ps1  ollama-stop.sh  sandbox-init.ps1  sandbox-init.sh  searxng-start.ps1  searxng-start.sh  searxng-stop.ps1  searxng-stop.sh  setup_e2e.sh
src/researcher/: Home.py  agent.py  chat_manager.py  citation_manager.py  cli.py  config.py  mcp_client.py  ollama_client.py  openai_compat_client.py  reranker.py  searxng_client.py  session_manager.py  web_crawler.py  webui.py  webui_launcher.py
tests/: conftest.py  test_agent.py  test_chat_manager.py  test_citation_manager.py  test_cli.py  test_config.py  test_constants.py  test_mcp_client.py  test_migrate_db.py  test_ollama_client.py  test_reranker.py  test_searxng_client.py  test_searxng_integration.py  test_session_manager.py  test_session_manager.py.backup  test_settings_flow.py  test_settings_integration.py  test_settings_page.py  test_source_injection.py  test_tag_fix.py  test_web_crawler.py  test_webui.py
tests/e2e/: conftest.py  (+1 more)
(+16 files in other folders)
